--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <option value="básica">Básica</option>
                 <option value="intermediária">Intermediária</option>
                 <option value="avançada">Avançada</option>
-                <option value="especializada">Especializada</option>
+                <option value="expert">Expert</option>
             </select>
         </div>
 
