--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             font-size: 1rem;
             border: 1px solid #cbd5e1; /* Borda padrão */
             transition: all 0.2s ease-in-out; /* Transição suave */
+            padding: 5px 5px;
         }
         input[type="text"]:focus, input[type="password"]:focus, select:focus {
             outline: none;
@@ -44,11 +45,12 @@
             box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.2); /* Sombra de foco */
         }
         button {
-            background-color: #6366f1; /* Cor de fundo roxa */
+            background-color: #4f46e5; /* Cor de fundo roxa */
             color: white;
             font-weight: 600;
             cursor: pointer;
             border: none;
+            padding: 5px 0px;
             box-shadow: 0 4px 10px rgba(99, 102, 241, 0.3); /* Sombra para o botão */
         }
         button:hover {
