--- a/v2.html
+++ b/v2.html
@@ -177,7 +177,11 @@
             <label for="geminiModel" class="block text-gray-700 text-sm font-medium mb-2">Modelo Gemini:</label>
             <select id="geminiModel" class="w-full">
                 <option value="gemini-2.0-flash">gemini-2.0-flash</option>
-                <option value="gemini-pro">gemini-pro</option>
+                <option value="gemini-2.5-flash-preview-05-20">gemini-2.5-flash-preview-05-20</option>
+                <option value="gemini-2.5-pro-preview-05-06">gemini-2.5-pro-preview-05-06</option>
+                <option value="gemini-2.0-flash-lite">gemini-2.0-flash-lite</option>
+                <option value="gemini-1.5-pro">gemini-1.5-pro</option>
+                
             </select>
         </div>
 
