--- a/v3.html
+++ b/v3.html
@@ -173,9 +173,9 @@
             </select>
         </div>
 
-        <div>
+        <div class="none">
             <label for="geminiModel" class="block text-gray-700 text-sm font-medium mb-2">Modelo Gemini:</label>
-            <select id="geminiModel" class="w-full">
+            <select id="geminiModel" class="w-full ">
                 <option value="gemini-2.0-flash">gemini-2.0-flash</option>
                 <option value="gemini-pro">gemini-pro</option>
             </select>
